[tool.poetry]
name = "ms-dep-pkg-r"
version = "0.1.0"
description = ""
authors = ["Steve Taylor <steve@deployhub.com>"]
license = "Apache-2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.7"
psycopg2-binary = "2.9.10"
pydantic = "2.10.6"
sqlalchemy = "2.0.37"
uvicorn = "0.34.0"
requests = "2.32.3"
numpy = "2.2.2"
pandas = "2.2.3"
certifi = "2024.12.14"
idna = "3.10"
starlette = "0.45.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
